--- a/LinkStash/requirements.txt
+++ b/LinkStash/requirements.txt
@@ -1,5 +1,13 @@
+altgraph==0.17.4
 customtkinter==5.2.2
 darkdetect==0.8.0
 dnspython==2.7.0
+dotenv==0.9.9
 packaging==24.2
+pefile==2023.2.7
+pyinstaller==6.13.0
+pyinstaller-hooks-contrib==2025.3
 pymongo==4.12.0
+python-dotenv==1.1.0
+pywin32-ctypes==0.2.3
+setuptools==78.1.0
